update table editor

--- a/webapp/channels/src/i18n/en.json
+++ b/webapp/channels/src/i18n/en.json
@@ -291,6 +291,9 @@
   "admin.access_control.policy.edit_policy.delete_policy.subtitle": "This policy will be deleted and cannot be recovered.",
   "admin.access_control.policy.edit_policy.delete_policy.subtitle.has_resources": "Remove all assigned resources (eg. Channels) to be able to delete this policy",
   "admin.access_control.policy.edit_policy.delete_policy.title": "Delete policy",
+  "admin.access_control.policy.edit_policy.notice.button": "Configure user attributes",
+  "admin.access_control.policy.edit_policy.notice.text": "You havent configured any user attributes yet. Attribute-Based Access Control requires user attributes that are either synced from an external system (like LDAP or SAML) or manually configured and enabled on this server. To start using attribute based access, please configure user attributes in System Properties.",
+  "admin.access_control.policy.edit_policy.notice.title": "Please add user attributes and values to use Attribute-Based Access Control",
   "admin.access_control.policy.edit_policy.policyName": "Access control policy name:",
   "admin.access_control.policy.edit_policy.policyName.placeholder": "Add a unique policy name",
   "admin.access_control.policy.edit_policy.switch_to_advanced": "Switch to Advanced Mode",
@@ -305,6 +308,8 @@
   "admin.access_control.table_editor.add_attribute": "Add attribute",
   "admin.access_control.table_editor.attribute": "Attribute",
   "admin.access_control.table_editor.blank_state": "Select a user attribute and values to create a rule",
+  "admin.access_control.table_editor.create_value": "Create \"{value}\"",
+  "admin.access_control.table_editor.help_text": "Each row is a single condition that must be met for a user to comply with the policy. All rules are combined with logical AND operator (`&&`).",
   "admin.access_control.table_editor.learnMore": "Learn more about creating access expressions with examples.",
   "admin.access_control.table_editor.operator": "Operator",
   "admin.access_control.table_editor.operator.contains": "contains",
@@ -316,13 +321,16 @@
   "admin.access_control.table_editor.remove_row": "Remove row",
   "admin.access_control.table_editor.selector.filter_attributes": "Search attributes...",
   "admin.access_control.table_editor.selector.filter_operators": "Search operators...",
+  "admin.access_control.table_editor.selector.filter_or_create": "Search or create value...",
   "admin.access_control.table_editor.selector.select_attribute": "Select attribute",
   "admin.access_control.table_editor.test_access_rule": "Test access rule",
   "admin.access_control.table_editor.value.placeholder": "Add value...",
+  "admin.access_control.table_editor.value.select_value": "Select value",
   "admin.access_control.table_editor.values": "Values",
-  "admin.access_control.table_editor.values.placeholder": "Add values...",
+  "admin.access_control.table_editor.values.create_placeholder": "Type to create value",
+  "admin.access_control.table_editor.values.select_values": "Select values...",
   "admin.access_control.testResults": "Access Rule Test Results",
-  "admin.accesscontrol.enableDesc": "Allow access restrictions based on user attributes using custom access policies",
+  "admin.accesscontrol.enableDesc": "Allow access restrictions based on user attributes using custom access policies. To effectively use this feature, you must define user attributes (properties) in the {userAttributes} section.",
   "admin.accesscontrol.enableTitle": "Allow attribute based access controls on this servers",
   "admin.accesscontrol.title": "Attribute-Based Access",
   "admin.advance.cluster": "High Availability",
